--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-angularwebsitegenerator",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Generate Angular Websites with 'yo websitegenerator' and new features with 'yo websitegenerator:feature'.",
   "license": "MIT",
   "main": "app/index.js",
@@ -24,8 +24,9 @@
     "yeoman-generator"
   ],
   "dependencies": {
-    "yeoman-generator": "^0.19.0",
     "chalk": "^1.0.0",
+    "glob": "^5.0.5",
+    "yeoman-generator": "^0.19.0",
     "yosay": "^1.0.2"
   },
   "devDependencies": {
